--- a/Pages/info.html
+++ b/Pages/info.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Institución dedicada a la salud psicológica y psiquiátrica, proporcionamos espacios multidisciplinarios a profesionales de primer nivel, acorde a las necesidades de los pacientes.">
+    <meta name="keywords"
+        content="psicólogo, psicologo , psicología, psicologia, terapeuta, analista, consultorio, salud, mental, mente, diván, divan, hablar, freud, sigmund, lacán, lacan, jacques, neurólogo, neurologo, transferencia, rolón, rolon, lupsa, pulsión, pulsion">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -20,7 +24,7 @@
 <body>
     <header class="encabezado">
         <div class="encabezado__imagen animate__shakeX">
-            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt=""></a>
+            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt="Lupsa Consultorios"></a>
         </div>
         <span class="encabezado__texto_logo animate__backInDown">
             <div>Espacio Lupsa</div>
@@ -55,11 +59,13 @@
             <div class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Dolores perspiciatis culpa, alias porro esse perferendis. Alias beatae blanditiis minima sed eaque
                 similique, eos fugit illum quis omnis, in asperiores consequuntur.</div>
-            <div class="cuerpo__foto1 animate__fadeInRight" style="background-image: url(../Assets/generales/Foto1.jpg);"></div>
+            <div class="cuerpo__foto1 animate__fadeInRight"
+                style="background-image: url(../Assets/generales/Foto1.jpg);"></div>
             <div class="cuerpo__texto2 animate__fadeInRight">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Sequi dolore fugiat nam ratione ea, totam assumenda ut cum quisquam, architecto deleniti! Maiores est
                 quibusdam enim. Accusamus ipsa soluta rem quas.</div>
-            <div class="cuerpo__foto2 animate__fadeInLeft" style="background-image: url(../Assets/generales/Foto3.jpg);"></div>
+            <div class="cuerpo__foto2 animate__fadeInLeft"
+                style="background-image: url(../Assets/generales/Foto3.jpg);"></div>
         </div>
     </main>
 
