--- a/Pages/institucional.html
+++ b/Pages/institucional.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Institución dedicada a la salud psicológica y psiquiátrica, proporcionamos espacios multidisciplinarios a profesionales de primer nivel, acorde a las necesidades de los pacientes.">
+    <meta name="keywords"
+        content="psicólogo, psicologo , psicología, psicologia, terapeuta, analista, consultorio, salud, mental, mente, diván, divan, hablar, freud, sigmund, lacán, lacan, jacques, neurólogo, neurologo, transferencia, rolón, rolon, lupsa, pulsión, pulsion">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -20,7 +24,7 @@
 <body>
     <header class="encabezado">
         <div class="encabezado__imagen animate__shakeX">
-            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt=""></a>
+            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt="Lupsa Consultorios"></a>
         </div>
         <span class="encabezado__texto_logo animate__backInDown">
             <div>Espacio Lupsa</div>
@@ -60,7 +64,8 @@
                 reprehenderit labore? Beatae voluptatum sint quidem ipsam eos dolorem sed, mollitia delectus vitae quas
                 pariatur facere unde odio! Inventore excepturi nesciunt voluptatum iure omnis error recusandae illo
                 officiis, at nostrum, beatae quo veniam culpa sed earum ullam.</div>
-            <div class="cuerpo__foto1 animate__fadeInRight" style="background-image: url(../Assets/generales/Foto4.jpg);"> </div>
+            <div class="cuerpo__foto1 animate__fadeInRight"
+                style="background-image: url(../Assets/generales/Foto4.jpg);"> </div>
             <div class="cuerpo__texto2 animate__fadeInRight">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Incidunt rerum repellat, eaque iusto, soluta velit vitae quae eius iure facilis eligendi dolorem ab? Eos
                 pariatur, nostrum commodi voluptate illum at, delectus earum reprehenderit mollitia deserunt unde vel
@@ -69,10 +74,11 @@
                 eum blanditiis, numquam quam similique eaque provident saepe quod suscipit totam ipsam voluptatibus quis
                 itaque ducimus sunt aut dolorem minus. Ducimus, reprehenderit nesciunt molestiae laboriosam nostrum,
                 voluptate esse, minus iste voluptates nemo sapiente corporis libero quisquam.</div>
-            <div class="cuerpo__foto2 animate__fadeInLeft" style="background-image: url(../Assets/generales/Foto5.jpg);"> </div>
+            <div class="cuerpo__foto2 animate__fadeInLeft"
+                style="background-image: url(../Assets/generales/Foto5.jpg);"> </div>
         </div>
     </main>
-    
+
     <a class="subir_boton" href="#">
         <i class="fa-solid fa-arrow-up"></i>
     </a>
