--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Institución dedicada a la salud psicológica y psiquiátrica, proporcionamos espacios multidisciplinarios a profesionales de primer nivel, acorde a las necesidades de los pacientes.">
+    <meta name="keywords"
+        content="psicólogo, psicologo , psicología, psicologia, terapeuta, analista, consultorio, salud, mental, mente, diván, divan, hablar, freud, sigmund, lacán, lacan, jacques, neurólogo, neurologo, transferencia, rolón, rolon, lupsa, pulsión, pulsion">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -22,7 +26,7 @@
 <body>
     <header class="encabezado">
         <div class="encabezado__imagen animate__shakeX">
-            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt=""></a>
+            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt="Lupsa Consultorios"></a>
         </div>
         <span class="encabezado__texto_logo animate__backInDown">
             <div>Espacio Lupsa</div>
@@ -58,7 +62,8 @@
                 Dolores perspiciatis culpa,
                 alias porro esse perferendis. Alias beatae blanditiis minima sed eaque similique, eos fugit illum quis
                 omnis, in asperiores consequuntur.</p>
-            <div class="cuerpo__foto1 animate__fadeInRight" style="background-image: url(../Assets/generales/Foto6.jpg);"> </div>
+            <div class="cuerpo__foto1 animate__fadeInRight"
+                style="background-image: url(../Assets/generales/Foto6.jpg);"> </div>
         </div>
     </main>
     <h1 class="titulo animate__fadeInLeft">Profesionales a su servicio</h1>
@@ -226,7 +231,9 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <script> AOS.init(); </script>
+    <script>
+        AOS.init();
+    </script>
 
 
 </body>
