--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Institución dedicada a la salud psicológica y psiquiátrica, proporcionamos espacios multidisciplinarios a profesionales de primer nivel, acorde a las necesidades de los pacientes.">
-    <meta name="keywords" content="psicólogo, psicologo , psicología, psicologia, terapeuta, analista, consultorio, salud, mental, mente, diván, divan, hablar, freud, sigmund, lacán, lacan, jacques, neurólogo, neurologo, transferencia, rolón, rolon, lupsa, pulsión, pulsion">
+    <meta name="description"
+        content="Institución dedicada a la salud psicológica y psiquiátrica, proporcionamos espacios multidisciplinarios a profesionales de primer nivel, acorde a las necesidades de los pacientes.">
+    <meta name="keywords"
+        content="psicólogo, psicologo , psicología, psicologia, terapeuta, analista, consultorio, salud, mental, mente, diván, divan, hablar, freud, sigmund, lacán, lacan, jacques, neurólogo, neurologo, transferencia, rolón, rolon, lupsa, pulsión, pulsion">
 
     <!--********** inicio link bootstrap **********-->
 
@@ -26,7 +28,7 @@
 <body>
     <header class="encabezado">
         <div class="encabezado__imagen animate__shakeX">
-            <a href="./index.html"><img class="encabezado__logo" src="./Assets/logo.png" alt=""></a>
+            <a href="./index.html"><img class="encabezado__logo" src="./Assets/logo.png" alt="Lupsa Consultorios"></a>
         </div>
         <span class="encabezado__texto_logo animate__backInDown">
             <div>Espacio Lupsa</div>
@@ -77,35 +79,40 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active d-item">
-                        <img src="./Assets/consultorios/consultorio1.jpg" class="d-block w-80 d-img img-fluid mx-auto" alt="...">
+                        <img src="./Assets/consultorios/consultorio1.jpg" class="d-block w-80 d-img img-fluid mx-auto"
+                            alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Consultorio 1</h5>
                             <!-- <p>Some representative placeholder content for the first slide.</p> -->
                         </div>
                     </div>
                     <div class="carousel-item d-item">
-                        <img src="./Assets/consultorios/consultorio2.jpg" class="d-block w-80 d-img img-fluid mx-auto" alt="...">
+                        <img src="./Assets/consultorios/consultorio2.jpg" class="d-block w-80 d-img img-fluid mx-auto"
+                            alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Consultorio 2</h5>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
                         </div>
                     </div>
                     <div class="carousel-item d-item">
-                        <img src="./Assets/consultorios/consultorio3.jpg" class="d-block w-80 d-img img-fluid mx-auto" alt="...">
+                        <img src="./Assets/consultorios/consultorio3.jpg" class="d-block w-80 d-img img-fluid mx-auto"
+                            alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Consultorio 3</h5>
                             <!-- <p>Some representative placeholder content for the third slide.</p> -->
                         </div>
                     </div>
                     <div class="carousel-item d-item">
-                        <img src="./Assets/consultorios/consultorio4.jpg" class="d-block w-80 d-img img-fluid mx-auto" alt="...">
+                        <img src="./Assets/consultorios/consultorio4.jpg" class="d-block w-80 d-img img-fluid mx-auto"
+                            alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Consultorio 4</h5>
                             <!-- <p>Some representative placeholder content for the third slide.</p> -->
                         </div>
                     </div>
                     <div class="carousel-item d-item">
-                        <img src="./Assets/consultorios/consultorio5.jpeg" class="d-block w-80 d-img img-fluid mx-auto" alt="...">
+                        <img src="./Assets/consultorios/consultorio5.jpeg" class="d-block w-80 d-img img-fluid mx-auto"
+                            alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Consultorio 5</h5>
                             <!-- <p>Some representative placeholder content for the third slide.</p> -->
@@ -122,14 +129,14 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-
-                <!--********** fin carousel bootstrap **********-->
-
             </div>
+        </div>
+        
+        <!--********** fin carousel bootstrap **********-->
 
-            <section>
-                <a href="#" class="cuerpo__boton">más info</a>
-            </section>
+        <section>
+            <a href="#" class="cuerpo__boton">más info</a>
+        </section>
     </main>
 
     <a class="subir_boton" href="#">
@@ -139,15 +146,6 @@
     <a class="whatsapp_boton" href="#">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
-
-    <footer class="pie">
-        <div class="pie__texto">Espacio Lupsa 2024 todos los derechos reservados</div>
-        <span class="pie__redes">
-            <a href="""><i class=" fa-brands fa-x-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-        </span>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
@@ -160,5 +158,13 @@
     </script>
 
 </body>
+<footer class="pie">
+    <div class="pie__texto">Espacio Lupsa 2024 todos los derechos reservados</div>
+    <span class="pie__redes">
+        <a href="""><i class=" fa-brands fa-x-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+    </span>
+</footer>
 
 </html>
