--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -20,7 +20,7 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
-    <link rel="shortcut icon" href="./Assets/logo.png" />
+    <link rel="shortcut icon" href="../Assets/logo.png" />
 
     <title>Staff</title>
 </head>
